# dynamic-mcp-hub

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  mcp_dispatcher.py  models.py  openapi_loader.py  openapi_to_mcp.py  registry.py
examples/: dailymed.yaml  dog_api.yaml  httpbin.yaml  openfda_drug_label.yaml  rxnorm.yaml
scripts/: README_mcp_llm_chat.md  mcp_llm_chat.py
