[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hub"
version = "0.1.0"
description = "Dynamic MCP Hub - Convert OpenAPI specs to MCP servers on the fly"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
